make code beautiful